-
Bug
-
Resolution: Fixed
-
Blocker
-
None
-
lustre 2.3 with
LU-2367
-
3
-
6177
c1-0c2s0n2 LustreError: 4201:0:(osc_cache.c:2844:osc_cache_writeback_range()) ASSERTION( hp == 0 && discard == 0 ) failed:
c1-0c2s0n2 LustreError: 4201:0:(osc_cache.c:2844:osc_cache_writeback_range()) LBUG
c1-0c2s0n2 Pid: 4201, comm: rm
c1-0c2s0n2 Call Trace:
c1-0c2s0n2 [<ffffffff81005d29>] try_stack_unwind+0x169/0x1b0
c1-0c2s0n2 [<ffffffff810047c9>] dump_trace+0x89/0x450
c1-0c2s0n2 [<ffffffffa02ec8c7>] libcfs_debug_dumpstack+0x57/0x80 [libcfs]
c1-0c2s0n2 [<ffffffffa02ece37>] lbug_with_loc+0x47/0xc0 [libcfs]
c1-0c2s0n2 [<ffffffffa084059c>] osc_cache_writeback_range+0x113c/0x11e0 [osc]
c1-0c2s0n2 [<ffffffffa0826352>] osc_lock_flush+0x82/0x1f0 [osc]
c1-0c2s0n2 [<ffffffffa0826599>] osc_lock_cancel+0xd9/0x1c0 [osc]
c1-0c2s0n2 [<ffffffffa0542f55>] cl_lock_cancel0+0x75/0x160 [obdclass]
c1-0c2s0n2 [<ffffffffa0543d5b>] cl_lock_cancel+0x13b/0x140 [obdclass]
c1-0c2s0n2 [<ffffffffa08279bc>] osc_ldlm_blocking_ast+0x20c/0x360 [osc]
c1-0c2s0n2 [<ffffffffa0648413>] ldlm_cancel_callback+0x63/0x110 [ptlrpc]
c1-0c2s0n2 [<ffffffffa0656d5b>] ldlm_cli_cancel_local+0x7b/0x370 [ptlrpc]
c1-0c2s0n2 [<ffffffffa065964d>] ldlm_cli_cancel_list_local+0xed/0x200 [ptlrpc]
c1-0c2s0n2 [<ffffffffa06598e5>] ldlm_cancel_resource_local+0x185/0x2a0 [ptlrpc]
c1-0c2s0n2 [<ffffffffa080bd0b>] osc_destroy+0x1cb/0x8a0 [osc]
c1-0c2s0n2 [<ffffffffa08a6a4e>] lov_destroy+0x3de/0xc60 [lov]
c1-0c2s0n2 [<ffffffffa0999a63>] ll_objects_destroy+0x433/0x1830 [lustre]
c1-0c2s0n2 [<ffffffffa099b976>] ll_unlink+0x406/0x670 [lustre]
c1-0c2s0n2 [<ffffffff8113cabb>] vfs_unlink+0x8b/0x100
c1-0c2s0n2 [<ffffffff8114062b>] do_unlinkat+0x1ab/0x1c0
c1-0c2s0n2 [<ffffffff811407b2>] sys_unlinkat+0x22/0x40
c1-0c2s0n2 [<ffffffff814afd6b>] system_call_fastpath+0x16/0x1b
c1-0c2s0n2 [<00007f92dcad5d38>] 0x7f92dcad5d38
c1-0c2s0n2 Kernel panic - not syncing: LBUG
- duplicates
-
LU-2723 a client hangs forever in osc_extent_wait() on directio
-
- Resolved
-