LU-2643 osc: remove assert for OES_ACTIVE

Client got lock cancel but some part for cancel is actively used
by client and has OES_ACTIVE state. All cancel locks is high priority
and hp = 1 for osc_cache_writeback_range(). This cause assert
LASSERT(hp == 0 && discard == 0)
This patch removes the assert, osc_cache will work slower than
designed, probably, but it need to wait clients active work to
send pages.

Signed-off-by: Alexander Boyko <alexander_boyko@xyratex.com>
Change-Id: I9a7e17fbc9de615988c53c36340fd5be9e9dd697